--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -8,6 +8,7 @@ $text_secondary: rgb(172, 172, 172);
 .home{
     padding-top: 8rem;
     width: 100%;
+    box-sizing: border-box;
     padding-left: 45px;
     padding-right: 45px;
 }
