--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
   min-height: 100svh;
   max-width: 1280px;
+  box-sizing: border-box;
   margin: 0 auto;
   padding: 0.5rem;
   text-align: center;
