--- a/src/styles/projects.module.scss
+++ b/src/styles/projects.module.scss
@@ -2,6 +2,7 @@
 $text_main: rgba(243, 243, 243, 0.87);
 $text_secondary: rgb(172, 172, 172);
 .projects{
+    margin-top: 6rem;
     padding-top: 1rem;
     h1{
         display: flex;
@@ -20,7 +21,25 @@ $text_secondary: rgb(172, 172, 172);
     flex-direction: column;
     gap: 4rem;
 }
+/*
+@keyframes appear{
+    from{
+        opacity: 0;
+        scale: 0.7;
+    }
+    to{
+        opacity: 1;
+        scale: 1;
+    }
+}
+*/
+
 .project{
+    /*
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 30%;
+    */
     display: flex;
     flex-direction: row;
     gap: 30px;
@@ -94,6 +113,7 @@ $text_secondary: rgb(172, 172, 172);
         gap: 15px;
 
         a{
+            line-height: 17px;
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -115,6 +135,8 @@ $text_secondary: rgb(172, 172, 172);
         }
     }
 }
+
+
 @media (width<1166px) {
     .project{
         flex-direction: column;
